testing/errors/alreadydefined4.a
;ACME 0.96.5
	a = [1, 2]
	a = [1, 3]	; -> "already defined" (value has changed)
